--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,9 @@
         <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" /> -->
         <meta name="viewport" content="user-scalable=no, width=device-width" />
         <link rel='stylesheet' type='text/css' href='js/aplanaHhPhone/aplanaHh.css' />
+	<!-- Enable all requests, inline styles, and eval() -->
+	<meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+
         <!-- 
         <link rel='stylesheet' type='text/css' href='css/bootstrap.min.css' />
         <link rel='stylesheet' type='text/css' href='css/bootstrap-theme.min.css' />
@@ -56,6 +59,7 @@
 		 -->
 		
 		<script>require(["aplanaHh/aplanaHh"]);</script>
+		<script src="phonegap.js"></script>
         <title>Отпуска и больничные</title>
     </head>
 	<body>
