--- a/www/index.html
+++ b/www/index.html
@@ -59,7 +59,7 @@
 		 -->
 		
 		<script>require(["aplanaHh/aplanaHh"]);</script>
-		<script src="phonegap.js"></script>
+		<script src="cordova.js"></script>
         <title>Отпуска и больничные</title>
     </head>
 	<body>
